# oxidized-multibot

./: Cargo.toml  README.md
src/: enums.rs  main.rs
src/command_handlers/: admin.rs
