[package]
name = "telebot"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
